# cogentra

./: .env.docker.example  .env.example  .gitignore  Makefile  README.md  ai-pipeline.md  api-spec.md  architecture.md  deployment.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  product-overview.md  tailwind.config.js  tsconfig.base.json  turbo.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260415_0001_initial.py
apps/api/app/: __init__.py  config.py  deps.py  main.py
apps/api/app/models/: api.py  domain.py
apps/api/app/providers/ai/: base.py  demo.py  vertex.py
apps/api/app/providers/queue/: base.py  cloud_tasks.py  local.py
apps/api/app/providers/speech/: base.py  demo.py  google.py
apps/api/app/providers/storage/: base.py  demo.py  gcs.py
apps/api/app/routers/: assignments.py  auth.py  cases.py  dashboard.py  session.py  settings.py  uploads.py
apps/api/app/scripts/: seed_demo.py
apps/api/app/services/: concentra.py  demo_repository.py  firestore_repository.py  materialization.py  parsing.py  seed.py  session_rules.py  text.py
apps/api/concentra_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/oralv/: config.py  db.py  main.py  security.py  storage.py  tasks.py  worker_app.py
apps/api/oralv/api/: __init__.py  deps.py  router.py
apps/api/oralv/models/: __init__.py  entities.py
apps/api/oralv/prompts/: classification.md  evidence-synthesis.md  normalization.md  plan-generation.md
apps/api/oralv/providers/: __init__.py  base.py  deterministic.py  registry.py
apps/api/oralv/schemas/: __init__.py  auth.py  cases.py  common.py  sessions.py
apps/api/oralv/scripts/: seed_demo.py
apps/api/oralv/services/: __init__.py  analytics.py  audit.py  auth.py  cases.py  pipeline.py  rate_limit.py  review.py  sessions.py  templates.py
apps/api/runtime/: demo_store.json
apps/api/tests/: test_pipeline.py
apps/api/tests/integration/: conftest.py  test_case_processing.py
apps/api/tests/unit/: test_pipeline.py
(+151 files in other folders)
