[project]
name = "concentra-api"
version = "0.1.0"
description = "Concentra FastAPI backend"
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "orjson>=3.11.2",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
  "itsdangerous>=2.2.0"
]

[project.optional-dependencies]
google = [
  "firebase-admin>=6.9.0",
  "google-cloud-aiplatform>=1.70.0",
  "google-cloud-firestore>=2.21.0",
  "google-cloud-speech>=2.33.0",
  "google-cloud-storage>=3.3.0",
  "google-cloud-tasks>=2.18.0"
]
test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.1.0"
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
